fixed spacing and added score goal

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -49,4 +49,8 @@
             /* Move the background image to the left */
         }
     }
+
+    .answerButton {
+        margin-top: 8%;
+    }
 }
