--- a/src/styles/_questionBox.scss
+++ b/src/styles/_questionBox.scss
@@ -18,6 +18,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    p {
+        margin-top: 2%;
+    }
 
 }
 
