--- a/src/styles/_visuals.scss
+++ b/src/styles/_visuals.scss
@@ -24,7 +24,7 @@
 }
 
 form {
-    margin-top: 2%;
+    margin-top: 1%;
     margin-bottom: 2%;
     padding: 1%;
 
@@ -66,7 +66,7 @@ input[type="radio"]:checked:before {
     border: none;
     margin: 0;
     padding: 0;
-    margin-top: 8%;
+    margin-top: 4%;
     background-color: black;
     color: $light;
     border: 2px solid white;
